# cefeika

./: .gitattributes  CMakeLists.txt  README.md  algo.hpp  base.hpp  cfg.hpp  concur.hpp  endianness.hpp  enum_bitmask.hpp  filesystem.hpp  fsmisc.hpp  jrpc.hpp  mem.hpp  mulf.hpp  net.hpp  os.hpp  pgfe.hpp  que.hpp  reader.hpp  rng.hpp  str.hpp  testo.hpp  ttpl.hpp  url.hpp  uuid.hpp  ws.cpp  wscl.cpp  wscl.hpp
algo/: CMakeLists.txt  algo.hpp
assert/: assert.hpp
assert/test/: assert-test.cpp
base/: CMakeLists.txt  base.hpp  endianness.hpp  enum_bitmask.hpp
cfg/: CMakeLists.txt  cfg.hpp
cmake/: FindEv.cmake  FindGraphicsMagick.cmake  FindPq.cmake  FindUv.cmake  dmitigr.cmake  dmitigr_cefeika-config.cmake  dmitigr_cefeika.cmake  dmitigr_cefeika.cmake.in  dmitigr_cefeika_libraries.cmake  dmitigr_cefeika_libraries.cmake.in  dmitigr_cefeika_libraries_all.cmake  dmitigr_librarian.cmake
concur/: CMakeLists.txt  concur.hpp  version.hpp
concur/test/: CMakeLists.txt
crc/: CMakeLists.txt  crc.hpp
crc/test/: CMakeLists.txt  crc-unit-test.cpp
doc/fcgi/: README.md
doc/img/: README.md
doc/mulf/: README.md
doc/pgfe/: README.md
doc/sqlixx/: README.md
doc/ttpl/: README.md
doc/url/: README.md
doc/util/: README.md
doc/uvli/: README.md
doc/ws/: README.md
doc/wsbe/: README.md
doc/wscl/: README.md
dt/: CMakeLists.txt  README.md  basics.hpp  time.hpp  types_fwd.hpp  version.hpp
dt/test/: CMakeLists.txt
endianness/: CMakeLists.txt  endianness.hpp
enum_bitmask/: CMakeLists.txt  enum_bitmask.hpp
fcgi/: CMakeLists.txt  fcgi.hpp  listener.cpp  listener.hpp  streambuf.hpp  streams.hpp
fcgi/test/: CMakeLists.txt  fcgi-hellomt.cpp
filesystem/: CMakeLists.txt
fsmisc/: CMakeLists.txt  fsmisc.hpp  version.hpp
http/: CMakeLists.txt  README.md  connection.hpp  cookie.hpp  types_fwd.hpp  version.hpp
http/test/: CMakeLists.txt  http-server.cpp  http-unit-basics.cpp  http-unit-cookie.cpp  http-unit-date.cpp  http-unit-set_cookie.cpp
jrpc/: README.md  request.hpp  response.hpp  types_fwd.hpp  version.hpp
jrpc/test/: CMakeLists.txt  jrpc-unit-response.cpp
lib/dmitigr/: CMakeLists.txt  algo.cpp  algo.hpp  app.cpp  app.hpp  assert.hpp  cefeika_header_only.hpp  cfg.cpp  cfg.hpp  concur.hpp  dll.hpp.in  dt.cpp  dt.hpp  endianness.hpp  enum_bitmask.hpp  fcgi.cpp  fcgi.hpp  fs.cpp  fs.hpp  fsmisc.hpp  http.cpp  http.hpp  img.cpp  img.hpp  jrpc.cpp  jrpc.hpp  lib.cpp.in  lib.hpp.in  liuv.cpp  liuv.hpp  math.hpp  mem.hpp  mp.cpp  mp.hpp  mulf.cpp  mulf.hpp  net.cpp  net.hpp  os.cpp  os.hpp  (+35 more)
lib/dmitigr/img/: CMakeLists.txt  graphicsmagick.cpp  graphicsmagick.hpp  img.hpp  types_fwd.hpp  version.hpp
lib/dmitigr/rajson/: CMakeLists.txt  conversions.cpp  conversions.hpp  dll.hpp  flat.hpp  fwd.hpp  rajson.hpp  value_view.hpp  version.hpp
lib/dmitigr/rajson/test/: rajson-unit-flat.cpp
lib/dmitigr/sqlixx/: CMakeLists.txt  connection.hpp  conversions.hpp  data.hpp  exception.hpp  sqlixx.hpp  statement.hpp  version.hpp
lib/dmitigr/usockx/: CMakeLists.txt  types_fwd.hpp
math/test/: CMakeLists.txt
mem/: CMakeLists.txt  mem.hpp
mulf/: CMakeLists.txt  mulf.hpp  version.hpp
mulf/test/: CMakeLists.txt  mulf-unit-valid.cpp
net/: CMakeLists.txt  address.hpp  conversions.hpp  descriptor.hpp  endpoint.hpp  exceptions.hpp  net.hpp  socket.hpp
net/test/: CMakeLists.txt  net-unit-test.cpp
os/: CMakeLists.txt  log.hpp  proc.hpp  proc_detach.hpp
os/test/: CMakeLists.txt  os-unit-proc_run.cpp
pgfe/: CMakeLists.txt  array_conversions.hpp  basics.hpp  completion.cpp  completion.hpp  composite.hpp  compositional.hpp  connection.cpp  connection_pool.hpp  conversions_api.hpp  data.hpp  defaults.hpp.in  defaults_unix.hpp  defaults_windows.hpp  errc.hpp  large_object.hpp  misc.cpp  notice.hpp  pq.hpp  prepared_statement.hpp  signal.hpp  sql_string.cpp  sql_vector.hpp  std_system_error.cpp  std_system_error.hpp
pgfe/test/: CMakeLists.txt  pgfe-unit-connection.cpp  pgfe-unit-conversions.cpp  pgfe-unit-hello_world.cpp  pgfe-unit-sql_vector.cpp  pgfe-unit.hpp
progpar/: errc.hpp  progpar.hpp
progpar/test/: CMakeLists.txt  progpar-test.cpp
que/: CMakeLists.txt  fifo_array.hpp  fifo_string.hpp  que.hpp  version.hpp
que/test/: CMakeLists.txt  que-unit-fifo_array.cpp  que-unit-fifo_string.cpp  que-unit-test.cpp
rajson/: CMakeLists.txt  conversions.hpp  fwd.hpp
rajson/test/: CMakeLists.txt  rajson-unit-conversions.cpp  rajson-unit-value_view.cpp
reader/: CMakeLists.txt  reader.hpp  version.hpp
rng/: CMakeLists.txt  rng.hpp  version.hpp
sqlixx/: connection.hpp  conversions.hpp  data.hpp  statement.hpp
sqlixx/test/: CMakeLists.txt  sqlixx-unit-test.cpp
str/: CMakeLists.txt
str/test/: CMakeLists.txt  str-unit-test.cpp
test/app/: CMakeLists.txt  app-program_parameters.cpp  app-unit-proc1.cpp
test/assert/: CMakeLists.txt  assert-test.cpp
test/concur/: CMakeLists.txt  concur-unit-test.cpp
test/dt/: CMakeLists.txt  dt-unit-timestamp.cpp
test/fcgi/: fcgi-hello.cpp  fcgi-hellomt.cpp  fcgi-largesend.cpp  fcgi-overload.cpp
testo/: CMakeLists.txt  testo.hpp
tests/: CMakeLists.txt  dt-unit-timestamp.cpp  fcgi-overload.cpp  http-unit-basics.cpp  http-unit-cookie.cpp  http-unit-date.cpp  http-unit-set_cookie.cpp  mulf-unit-valid1.cpp  pgfe-unit-benchmark_sql_string_replace.cpp  pgfe-unit-composite.cpp  pgfe-unit-connection.cpp  pgfe-unit-connection_options.cpp  pgfe-unit-conversions.cpp  pgfe-unit-data.cpp  pgfe-unit-entity_vector.cpp  pgfe-unit-problem.cpp  pgfe-unit-ps.cpp  pgfe-unit-sql_string.cpp  pgfe-unit-sql_vector.cpp  pgfe-unit.hpp  ttpl-unit-llt.cpp  unit.hpp  url-unit-qs1.cpp  url-unit-qs2.cpp  util-unit-net.cpp
tool/: cefeika_copy  cefeika_deps.sh  cefeika_test_deps.sh
ttpl/: CMakeLists.txt  ttpl.hpp
url/: CMakeLists.txt  url.hpp  version.hpp
uuid/: CMakeLists.txt  uuid.hpp  version.hpp
web/: types_fwd.hpp  v1.hpp
ws/: CMakeLists.txt  dll.hpp  http_request.cpp  listener_options.cpp  listener_options.hpp  timer.cpp  timer.hpp  util.hpp  uwebsockets.hpp  ws.hpp
wscl/: CMakeLists.txt  dll.hpp  wscl.cpp  wscl.hpp
(+488 files in other folders)
